fix word wrap in msg bubbles

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -55,8 +55,14 @@ a {
 	position: relative;
 	max-width: 70%;
 	font-size: 16px;
-	overflow: hidden;
-	text-overflow: ellipsis;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-word;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 }
 
 .cc-chatBubble-bot {
